<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/animechan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="sans-serif"
        android:text="@string/animechan"
        android:textSize="55dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/animechan_desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animechan_desc"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animechan" />

    <Button
        android:id="@+id/button_github"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/button_github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animechan_desc_text" />


    <Button
        android:id="@+id/button_redirect_to_quote_page"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:text="@string/show_quote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>